[package]
name = "rget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.26.0"
reqwest = {version = "0.10.8"}
failure = { version = "0.1.8", features = [] }
url = "1.7.2"
console = "0.5.0"
indicatif = "0.15.0"